[package]
name        = "cw-it"
version     = "0.1.1"
authors     = ["Pacman <pacman@apollo.farm>", "Sturdy <sturdy@apollo.farm>"]
edition     = "2021"
license     = "MPL-2.0"
description = "A crate of utils for integration testing CosmWasm smart contracts"
documentation = "https://docs.rs/cw-it"
repository  = "https://github.com/apollodao/cw-it"
readme      = "README.md"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level        = 3
debug            = false
rpath            = false
lto              = true
debug-assertions = false
codegen-units    = 1
panic            = 'abort'
incremental      = false
overflow-checks  = true

[features]
default = []
astroport = ["cw20", "dep:astroport"]
osmosis = ["proptest", "apollo-utils", "osmosis-test-tube"]
rpc-runner = ["testcontainers", "tonic", "tokio", "cosmos-sdk-proto"]
chain-download = ["tokio"]
multi-test = ["apollo-cw-multi-test", "paste", "regex"]
astroport-multi-test = [
  "multi-test",
  "astroport",
  "astroport-token",
  "astroport-native-coin-registry",
  "astroport-factory",
  "astroport-generator",
  "astroport-maker",
  "astroport-pair-stable",
  "astroport-pair",
  "astroport-router",
  "astroport-staking",
  "astroport-vesting",
  "astroport-whitelist",
]
osmosis-test-tube = ["dep:osmosis-test-tube"]

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
cosmwasm-std = { version = "1.2.1", features = ["stargate"] }
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
cosmwasm-schema = "1.2.1"
cosmrs = { version = "0.9.0", features = ["rpc", "cosmwasm"] }
prost = { version = "0.11.2", default-features = false, features = [
  "prost-derive",
] }
config = { version = "0.13.2", features = ["yaml"] }
anyhow = "1.0.66"
serde_json = "1.0.89"
strum = { version = "0.24.1", features = ["derive"] }
osmosis-std = "0.16.1"
test-tube = "0.1.5"
osmosis-test-tube = { version = "16.0.1", optional = true }

# Astroport deps
astroport = { version = "=2.8.0", optional = true }
cw20 = { version = "0.15", optional = true }

# Astroport contracts for multi-test
astroport-token = { version = "1.1.1", optional = true, features = ["library"] }
astroport-native-coin-registry = { version = "1.0.1", optional = true, features = ["library"] }
astroport-factory = { version = "1.5.1", optional = true, features = ["library"] }
astroport-generator = { version = "2.3.0", optional = true }
astroport-maker = { version = "1.3.1", optional = true }
astroport-pair-stable = { version = "2.1.1", optional = true, features = ["library"] }
astroport-pair = { version = "1.3.1", optional = true }
astroport-router = { version = "1.1.1", optional = true }
astroport-staking = { version = "1.1.0", optional = true }
astroport-vesting = { version = "1.3.1", optional = true, features = ["library"] }
astroport-whitelist = { version = "1.0.1", optional = true, features = ["library"] }

# Osmosis deps
proptest     = { version = "1.0.0", optional = true }
apollo-utils = { version = "0.1.1", optional = true }
regex        = { version = "1.7.3", optional = true }

# RPC Runner deps
tonic = { version = "0.8.2", default-features = false, optional = true }
testcontainers = { version = "0.14.0", features = [
  "experimental",
], optional = true }
cosmos-sdk-proto = { version = "0.15.0", optional = true }

# Cw-multi-test deps
apollo-cw-multi-test = { version = "0.16.2", optional = true }
paste         = { version = "1.0.12", optional = true }

# RPC Runner and chain-download deps
tokio = { version = "1.27.0", optional = true }

[dev-dependencies]
test-case      = "3.0.0"
testcontainers = { version = "0.14.0", features = ["experimental"] }
cw20-base      = { version = "0.15", features = ["library"] }
cw20           = "0.15"
